--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "rl2575-final-project",
-  "version": "0.0.0",
+  "name": "AITron",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js"
   },
   "dependencies": {
     "body-parser": "~1.18.2",
